feat(Game): create ball with value
특정 값을 가지는 공 리스트를 만드는 기능 추가